# magmaexplorer

./: .gitignore  README.md  comm.deduction  commute  commute.md  commute_script.lean  pyproject.toml
docs/: solver-algorithm.md  solver-userguide.md
docs/architecture/: ADR_001-magma-tool-stack.md
docs/sair/: competition.md  roadmap.md  sair-solo-userguide.md
examples/: commute.lean  sair-commute.lean  stub_llm.py
scripts/: build_sair_dataset.py
src/magmaexplorer/: __init__.py  __main__.py  dsl.py  entries.py  false_cert.py  lean_export.py  llm.py  magma_eval.py  repl.py  sair_solo.py  solver.py  solver_cli.py  term.py
tests/: conftest.py  test_dataset.py  test_dsl.py  test_false_cert.py  test_lean_export.py  test_llm.py  test_magma_eval.py  test_repl.py  test_sair_solo.py  test_solver.py  test_solver_cli.py  test_term.py
tests/data/: sair_problems.json
