[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "magmaexplorer"
version = "0.1.0"
description = "Interactive TUI for magma equations from equational theories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "prompt_toolkit",
    "rich",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
magmaexplorer = "magmaexplorer.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
